# dotfiles-calendar

./: README.md  com.ml4w.calendar.json  com.ml4w.calendar.pkginst  meson.build  setup.pkginst  setup.sh
data/: com.ml4w.calendar.desktop.in  com.ml4w.calendar.gschema.xml  com.ml4w.calendar.metainfo.xml.in  com.ml4w.calendar.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: config.json  dotfiles-calendar.gresource.xml  dotfiles-calendar.in  main.py  meson.build  settings.py  settings.ui  window.py  window.ui
